fix: watched tv wrapping

--- a/src/components/tv/simkl.module.css
+++ b/src/components/tv/simkl.module.css
@@ -1,5 +1,5 @@
 .simklGrid {
   display: grid;
   grid-gap: 20px;
-  grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(0, 1fr));
 }
